--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.1.0",
+    "@angular/animations": "^7.1.4",
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
     "@angular/core": "~7.1.0",
     "@angular/forms": "~7.1.0",
+    "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
@@ -25,6 +27,7 @@
     "igniteui-angular": "^7.3.0",
     "jszip": "^3.1.5",
     "minireset.css": "~0.0.4",
+    "ng-uikit": "^0.1.6",
     "ngx-bootstrap": "^4.1.1",
     "ngx-gallery": "^5.10.0",
     "rxjs": "~6.3.3",
