--- a/stoyanovgames/src/main/resources/application.properties
+++ b/stoyanovgames/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/stoyanovgames
+spring.datasource.username = root
+spring.datasource.password = 
+spring.jpa.show-sql= true
+spring.jpa.hibernate.ddl-auto = none
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.thymeleaf.cache = false
+
+
+fb.cors.access.url[0]=http://localhost:8080
+fb.cors.access.url[1]=http://localhost:4201
+fb.cors.access.url[2]=http://localhost:4202
