added a save update query for categories

--- a/stoyanovgames/src/main/resources/application.properties
+++ b/stoyanovgames/src/main/resources/application.properties
@@ -7,7 +7,9 @@ spring.jpa.show-sql= true
 spring.jpa.hibernate.ddl-auto = none
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.thymeleaf.cache = false
-
+spring.jpa.properties.hibernate.jdbc.batch_size=500
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.batch_versioned_data=true
 
 fb.cors.access.url[0]=http://localhost:8080
 fb.cors.access.url[1]=http://localhost:4201
