--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,8 @@
             "styles": [
               "node_modules/minireset.css/minireset.css",
               "src/styles.css",
-              "node_modules/igniteui-angular/styles/igniteui-angular.css"
+              "node_modules/igniteui-angular/styles/igniteui-angular.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
               "./node_modules/hammerjs/hammer.min.js"
@@ -84,7 +85,8 @@
             "karmaConfig": "src/karma.conf.js",
             "styles": [
               "src/styles.css",
-              "node_modules/igniteui-angular/styles/igniteui-angular.css"
+              "node_modules/igniteui-angular/styles/igniteui-angular.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
               "./node_modules/hammerjs/hammer.min.js"
