--- a/stoyanovgames/src/main/resources/application.properties
+++ b/stoyanovgames/src/main/resources/application.properties
@@ -4,13 +4,13 @@ spring.datasource.url = jdbc:mysql://localhost:3306/stoyanovgames
 spring.datasource.username = root
 spring.datasource.password = 
 spring.jpa.show-sql= true
-spring.jpa.hibernate.ddl-auto = none
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.thymeleaf.cache = false
 spring.jpa.properties.hibernate.jdbc.batch_size=500
 spring.jpa.properties.hibernate.order_updates=true
 spring.jpa.properties.hibernate.batch_versioned_data=true
-
+spring.jpa.properties.hibernate.hbm2ddl.auto: update
 fb.cors.access.url[0]=http://localhost:8080
 fb.cors.access.url[1]=http://localhost:4201
 fb.cors.access.url[2]=http://localhost:4202
