added fade effect to cross icons, fixed address in user profile. made backend changes, made some global css styles

--- a/stoyanovgames/src/main/resources/application.properties
+++ b/stoyanovgames/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.jpa.properties.hibernate.hbm2ddl.auto: update
 fb.cors.access.url[0]=http://localhost:8080
 fb.cors.access.url[1]=http://localhost:4201
 fb.cors.access.url[2]=http://localhost:4202
+logging.level.org.springframework.security=DEBUG
