added password confirmation

--- a/stoyanovgames/src/main/resources/application.properties
+++ b/stoyanovgames/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port = 8080
+server.serverPath = http://localhost:
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/stoyanovgames
 spring.datasource.username = root
@@ -15,3 +16,9 @@ fb.cors.access.url[0]=http://localhost:8080
 fb.cors.access.url[1]=http://localhost:4201
 fb.cors.access.url[2]=http://localhost:4202
 logging.level.org.springframework.security=DEBUG
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ivanov960806@gmail.com
+spring.mail.password=06081996
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
