--- a/stoyanovgames/pom.xml
+++ b/stoyanovgames/pom.xml
@@ -33,7 +33,11 @@
 			<version>5.4.2.Final</version>
 			<scope>runtime</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>it.ozimov</groupId>
+			<artifactId>spring-boot-email-core</artifactId>
+			<version>0.6.3</version>
+		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
