--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "ng-uikit": "^0.1.6",
     "ng2-sticky-nav": "^6.0.0",
     "ng5-slider": "^1.2.4",
+    "ngx-bar-rating": "^1.1.0",
     "ngx-bootstrap": "^4.1.1",
     "ngx-gallery": "^5.10.0",
-    "ngx-rating": "0.0.9",
     "ngx-toastr": "^10.0.4",
     "rxjs": "~6.3.3",
     "tasktimer": "^2.0.1",
