added some validators to backend

--- a/stoyanovgames/src/main/resources/application.properties
+++ b/stoyanovgames/src/main/resources/application.properties
@@ -22,3 +22,4 @@ spring.mail.username=ivanov960806@gmail.com
 spring.mail.password=06081996
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
